Fix textbox issue for coming-soon page on Firefox

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -491,7 +491,7 @@ ul.mobile-nav { display: block; margin-bottom: 0;
 .coming-soon { background: #004454; 
   .home-text { padding: 80px 0 83px; }
   .cs-text { margin-bottom: 5px; color: rgba(255,255,255,.5); }
-  input { padding: 20px 20px 19px; }
+  input { height: 42px; }
   .confirm { font-size: 1em; font-style: italic; 
     &.error { color: red; }}
   // .form-thanks { height: 45px; overflow: hidden;}
